# pindora-python

./: README.md  pindora.py  pyproject.toml
pindora/: __init__.py  __main__.py  client.py
