[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdora_ampujl"
version = "0.0.1"
authors = [
  { name="Lauri Ampuja", email="lauri.ampuja@gmail.com" },
]
description = "A python3 module for reading and changing status of pindora devices through API."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"